--- a/styles.css
+++ b/styles.css
@@ -59,3 +59,9 @@ p {
     font-size: 2.5rem;
     font-weight: bold;
 }
+
+@media (max-width: 480px){
+    h1 {
+        text-align: center;
+    }
+}
